--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   google_maps_flutter: ^2.1.1
   geolocator: ^8.0.0
   geocoding: ^2.0.1
-
+  percent_indicator: ^3.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
