--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^8.0.0
   geocoding: ^2.0.1
   percent_indicator: ^3.4.0
+  fl_chart: ^0.40.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
