--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   pedometer: ^3.0.0
   permission_handler: ^8.3.0
-  shared_preferences: ^2.0.9
   google_fonts: ^2.1.0
   jiffy: ^4.1.0
   hive: ^2.0.4
@@ -48,6 +47,7 @@ dependencies:
   percent_indicator: ^3.4.0
   auth_buttons: ^1.0.0
   fl_chart: ^0.40.5
+  lottie: ^1.2.1
   #Stacked
   stacked: ^2.1.5
   stacked_services: ^0.8.6
@@ -62,6 +62,8 @@ dependencies:
   dotted_decoration: ^2.0.0
   timeline_tile: ^2.0.0
   curved_navigation_bar: ^1.0.1
+  shared_preferences: ^2.0.11
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -95,8 +97,11 @@ flutter:
     - assets/images/bicycle.png
     - assets/images/yoga.png
     - assets/images/
+    - assets/done.json
+    - assets/edit.json
+    - assets/email.json
 
-  # An image asset can refer to one or more resolution-specific "variants", see
+  # An image asset can refer to one  or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
